Translated web page to spanish

--- a/APPS/web/src/public/index.html
+++ b/APPS/web/src/public/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Refereezy - Football Match Management</title>
+  <title>Refereezy - Gestión de Partidos de Fútbol</title>
   <link rel="stylesheet" href="styles/index.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
@@ -13,51 +13,49 @@
       <h1><i class="fas fa-futbol"></i> Refereezy</h1>
       <nav>
         <ul>
-          <li class="active"><a href="index.html">Dashboard</a></li>
-          <li><a href="testing.html">Testing Console</a></li>
-          <li><a href="reports.html">Match Reports</a></li>
+          <li class="active"><a href="index.html">Panel Principal</a></li>
+          <li><a href="testing.html">Consola de Pruebas</a></li>
+          <li><a href="reports.html">Informes de Partidos</a></li>
         </ul>
       </nav>
     </div>
   </header>
-
   <main class="container">
     <section class="section welcome-section">
-      <h2>Welcome to Refereezy</h2>
+      <h2>Bienvenido a Refereezy</h2>
       <div class="welcome-content">
         <div class="intro-text">
-          <p>Refereezy is a comprehensive platform designed for football match management, providing tools for referees, teams, and competition organizers.</p>
-          <p>Our system connects mobile devices with smartwatches to record match incidents in real-time, ensuring accurate and efficient match reporting.</p>
+          <p>Refereezy es una plataforma integral diseñada para la gestión de partidos de fútbol, proporcionando herramientas para árbitros, equipos y organizadores de competiciones.</p>
+          <p>Nuestro sistema conecta dispositivos móviles con smartwatches para registrar incidentes de partido en tiempo real, garantizando informes precisos y eficientes.</p>
         </div>
         <div class="app-features">
-          <h3>Main Features:</h3>
+          <h3>Características Principales:</h3>
           <ul class="features-list">
             <li>
               <i class="fas fa-mobile-alt"></i>
               <div>
-                <h4>Mobile Apps for Referees</h4>
-                <p>Android application that allows referees to manage matches and record incidents quickly and efficiently.</p>
+                <h4>Aplicaciones Móviles para Árbitros</h4>
+                <p>Aplicación Android que permite a los árbitros gestionar partidos y registrar incidentes de forma rápida y eficiente.</p>
               </div>
             </li>
             <li>
               <i class="fas fa-stopwatch"></i>
               <div>
-                <h4>Smartwatch Integration</h4>
-                <p>Record incidents in real-time using an Android smartwatch app, paired with your mobile device.</p>
+                <h4>Integración con Smartwatch</h4>
+                <p>Registra incidentes en tiempo real utilizando una aplicación para smartwatch Android, sincronizada con tu dispositivo móvil.</p>
               </div>
-            </li>
-            <li>
+            </li>            <li>
               <i class="fas fa-clipboard-list"></i>
               <div>
-                <h4>Match Reports</h4>
-                <p>Generate and access detailed match reports with all incidents, scores, and player information.</p>
+                <h4>Informes de Partidos</h4>
+                <p>Genera y accede a informes detallados de partidos con todos los incidentes, puntuaciones e información de jugadores.</p>
               </div>
             </li>
             <li>
               <i class="fas fa-users"></i>
               <div>
-                <h4>Team Management</h4>
-                <p>Organize teams, players, and referees from the administrative dashboard.</p>
+                <h4>Gestión de Equipos</h4>
+                <p>Organiza equipos, jugadores y árbitros desde el panel de administración.</p>
               </div>
             </li>
           </ul>
@@ -66,53 +64,52 @@
     </section>
     
     <section class="section stats-section">
-      <h2>System Statistics</h2>
+      <h2>Estadísticas del Sistema</h2>
       <div class="stats-container">
         <div class="stat-card">
           <i class="fas fa-stopwatch"></i>
           <div class="stat-value" id="activeWatches">--</div>
-          <div class="stat-label">Active Smartwatches</div>
+          <div class="stat-label">Smartwatches Activos</div>
         </div>
         <div class="stat-card">
           <i class="fas fa-calendar-check"></i>
           <div class="stat-value" id="activeMatches">--</div>
-          <div class="stat-label">Active Matches</div>
+          <div class="stat-label">Partidos Activos</div>
         </div>
         <div class="stat-card">
           <i class="fas fa-file-alt"></i>
           <div class="stat-value" id="totalReports">--</div>
-          <div class="stat-label">Total Reports</div>
+          <div class="stat-label">Informes Totales</div>
         </div>
         <div class="stat-card">
           <i class="fas fa-sync"></i>
           <div class="stat-value" id="lastSync">--</div>
-          <div class="stat-label">Last Sync</div>
+          <div class="stat-label">Última Sincronización</div>
         </div>
       </div>
     </section>
-    
-    <section class="section getting-started">
-      <h2>Getting Started</h2>
+      <section class="section getting-started">
+      <h2>Cómo Empezar</h2>
       <div class="steps-container">
         <div class="step">
           <div class="step-number">1</div>
           <div class="step-content">
-            <h3>Register Your Smartwatch</h3>
-            <p>Use the <a href="testing.html">Testing Console</a> to connect your smartwatch with our system.</p>
+            <h3>Registra tu Smartwatch</h3>
+            <p>Utiliza la <a href="testing.html">Consola de Pruebas</a> para conectar tu smartwatch con nuestro sistema.</p>
           </div>
         </div>
         <div class="step">
           <div class="step-number">2</div>
           <div class="step-content">
-            <h3>Pair With Referee Account</h3>
-            <p>Connect your referee ID with the registered smartwatch to establish a connection.</p>
+            <h3>Empareja con tu Cuenta de Árbitro</h3>
+            <p>Conecta tu ID de árbitro con el smartwatch registrado para establecer una conexión.</p>
           </div>
         </div>
         <div class="step">
           <div class="step-number">3</div>
           <div class="step-content">
-            <h3>Manage Match Reports</h3>
-            <p>View and manage all match reports on the <a href="reports.html">Match Reports</a> page.</p>
+            <h3>Gestiona Informes de Partidos</h3>
+            <p>Visualiza y gestiona todos los informes de partidos en la página de <a href="reports.html">Informes de Partidos</a>.</p>
           </div>
         </div>
       </div>
@@ -121,7 +118,7 @@
 
   <footer class="main-footer">
     <div class="container">
-      <p>&copy; 2025 Refereezy - Modern Football Match Management Platform</p>
+      <p>&copy; 2025 Refereezy - Plataforma Moderna de Gestión de Partidos de Fútbol</p>
     </div>
   </footer>
   
